--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <header>
     <h1>Música Electrónica</h1>
     <p>El mundo de los ritmos electrónicos</p>
+    <p>Bienvenidos</p>
   </header>
+
 </body>
 </html>
