--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <p>El mundo de los ritmos electrónicos</p>
     <p>Bienvenidos</p>
   </header>
-
+  <main>
+    <h2>¿Qué es la Música Electrónica?</h2>
+    <p>La música electrónica es un género musical que utiliza tecnología electrónica y digital para crear sonidos. Desde el techno hasta el house, y el trance hasta el dubstep, la música electrónica abarca una amplia gama de estilos y subgéneros que son populares en todo el mundo.</p>
+    <p>La música electrónica abarca una amplia variedad de estilos y subgéneros, incluyendo el techno, house, trance, drum and bass, dubstep, ambient, EDM (Electronic Dance Music) y muchos otros. Cada subgénero tiene sus propias características sonoras y estilísticas que los distinguen entre sí.
 </body>
 </html>
