--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
     <p>Décadas de 1970-1980: Surgieron géneros como el krautrock, el disco y el synth-pop, que incorporaron elementos electrónicos en la música popular.</p>
     <p>Décadas de 1990-2000: Se desarrollaron géneros como el techno, el house, el trance y el drum and bass. La música electrónica comenzó a tener un impacto significativo en la cultura de los clubes y los festivales.</p>
     <p>Siglo XXI: La música electrónica continuó evolucionando con la proliferación de software de producción, lo que permitió a más personas crear música electrónica. Los festivales de música electrónica se convirtieron en eventos masivos y los DJs/productores electrónicos alcanzaron una fama global.</p>
+    <h2>Festivales</h2>
+  <p>Los festivales de música electrónica atraen a fanáticos de todo el mundo. Eventos como Tomorrowland, Ultra Music Festival y Electric Daisy Carnival ofrecen experiencias inolvidables llenas de música, luces y emociones.</p>
+  <img src="UltraMusical.jpg" width="100%" alt=" Ultra Music Festival">
+  
 </body>
 </html>
